# list-manager

./: Cargo.toml  README.md  flake.nix
examples/: fzf.sh
src/: args.rs  commands.rs  database.rs  list.rs  main.rs  manager.rs  tests.rs
