[package]
name = "list-manager"
version = "0.1.0"
edition = "2021"
description = "Manage todo lists with zero overhead."
license = "MIT"
authors = ["datsfilipe"]
homepage = "https://crates.io/crates/list-manager"
repository = "https://github.com/datsfilipe/list-manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
rusqlite = "0.30.0"
textwrap = "0.16.0"
users = "0.11.0"
