[package]
name = "list-manager"
version = "0.1.0"
edition = "2021"
description = "Manage todo lists with zero overhead."
license = "MIT"
authors = ["datsfilipe"]
homepage = "https://crates.io/crates/list-manager"
repository = "https://github.com/datsfilipe/list-manager"

[dependencies]
termion = "2.0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]
